force-app/main/default/objects/Contact/fields/Emergency_Contact_Priority__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Priority__c</fullName>
    <label>Emergency Contact Priority</label>
    <type>Number</type>
    <description>Order of priority for emergency contacts (1 = primary)</description>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>