force-app/main/default/objects/Contact/fields/Is_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency_Contact__c</fullName>
    <label>Is Emergency Contact</label>
    <type>Checkbox</type>
    <description>Indicates if this person is an emergency contact</description>
    <defaultValue>false</defaultValue>
</CustomField>