force-app/main/default/objects/Contact/fields/Is_Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_of_Kin__c</fullName>
    <label>Is Next of Kin</label>
    <type>Checkbox</type>
    <description>Indicates if this person is the next of kin</description>
    <defaultValue>false</defaultValue>
</CustomField>