force-app/main/default/objects/Contact/fields/Relationship_to_Resident__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Resident__c</fullName>
    <label>Relationship to Resident</label>
    <type>Picklist</type>
    <inlineHelpText>Relationship to the resident</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>